# ndp

./: .gitignore  NDPReduce.py  README.md  RELEASE.md  __init__.py  loader.py  pyproject.toml  schema.py  setup.py  steps.py
.github/workflows/: main.yml  python-publish.pyml
Jupyter/: NDPReduce.ipynb  Schema.ipynb
ndp/: __init__.py
src/ndp/: __init__.py  get_example_files.py  get_notebooks.py
src/ndp/jupyter/: NDPReduce.ipynb
src/ndp/test/: test_get.py
