[project]
name = "ndp"
version = "0.0.1"
description = "A python tool for reducing neutron depth profiling measurements"
authors = [
    {name = "Jamie Weaver", email="jamie.weaver@nist.gov"},
    {name = "Ronald Jones", email="ronald.jones@nist.gov"},
    {name = "Tyler Martin", email="tyler.martin@nist.gov"},
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.6"

keywords = ["materials science", "neutron", "physics", "measurement"]

classifiers = [
		'Development Status :: 4 - Beta',
		'Intended Audience :: Science/Research',
		'License :: Freely Distributable',
		'License :: Freeware',
		'License :: Public Domain',
		'Natural Language :: English',
		'Operating System :: MacOS',
		'Operating System :: Microsoft',
		'Operating System :: Unix',
		'Programming Language :: Python',
		'Programming Language :: Python :: 2',
		'Programming Language :: Python :: 2.7',
		'Programming Language :: Python :: 2 :: Only',
		'Programming Language :: Python :: 3',
		'Programming Language :: Python :: 3.5',
		'Programming Language :: Python :: 3.6',
		'Programming Language :: Python :: Implementation :: CPython',
		'Topic :: Scientific/Engineering',
		'Topic :: Scientific/Engineering :: Chemistry',
		'Topic :: Scientific/Engineering :: Physics',
]

# Requirements: This is done differently by poetry!
dependencies = [
    "numpy",
    "matplotlib",
    "jupyterlab",
]

[project.urls]
homepage = "https://github.com/ronjones43/ndp"
repository = "https://github.com/ronjones43/ndp"

[build-system]
requires = [
    "setuptools",
]
build-backend = "setuptools.build_meta"
